[project]
name = "nexhacks-backend-webhook"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi[standard]>=0.128.0",
    "httpx>=0.28.1",
    "modal>=1.3.0.post1",
    "ruff>=0.14.13",
    "ty>=0.0.12",
    "uvicorn>=0.40.0",
]
[tool.ruff]
target-version = "py313"
line-length = 100
exclude = [".venv", "__pycache__"]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "B", "C4", "UP"]

[tool.ruff.lint.isort]
known-first-party = ["app"]
